fix expanding search alignment issue

--- a/less/base/_expanding-search.less
+++ b/less/base/_expanding-search.less
@@ -1,4 +1,6 @@
-.expanding-search {}
+.expanding-search {
+  display: inline-flex;
+}
 
 .expanding-search__input {
   overflow: hidden;
@@ -15,7 +17,6 @@
 .expanding-search,
 .expanding-search__input,
 .expanding-search__submit {
-	float: left;
 	-webkit-transition: all 0.4s ease-in-out;
 	-moz-transition: all 0.4s ease-in-out;
 	transition: all 0.4s ease-in-out;
