--- a/less/base/_navs.less
+++ b/less/base/_navs.less
@@ -59,7 +59,7 @@
 
   a.active, a:hover {
     border: none;
-    background-color: transparent;
+    background-color: transparent !important;
   }
 }
 
